--- a/Proyecto-Angular/src/index.html
+++ b/Proyecto-Angular/src/index.html
@@ -1,11 +1,18 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>ProyectoAngular</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta charset="utf-8">        
+  <meta name="description" content="Esta página consiste en un portfolio en el cual se muestra 
+  información referente a mi experiencia laboral, mi formación académica, mis intereses, mis proyectos, y mis conocimientos
+  tecnológicos">
+  <meta name="keywords" content="Julián, Julian, Meneses, Julian Meneses, Julián Meneses, Portfolio">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Julián Meneses</title>
+  <link rel="icon" href="assets/logo.png">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+  rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> 		
+  <link rel="stylesheet"  type="text/css" href="estilos.css">
+  <script src="https://kit.fontawesome.com/5f7cc65535.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <app-root></app-root>
